[#694] added documentation for negatable options:
* user manual
* release notes